# spokit-back

./: .dockerignore  .gitignore  Dockerfile  README.md  backstage_website_proposal.md  docker-compose.yml  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
app/bike/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
app/bike/migrations/: 0001_initial.py  0002_initial.py  0002_remove_bike_nickname.py  0008_bikebuildlike.py  (+7 more)
app/core/: __init__.py  api.py  apps.py  images.py  models.py  pagination.py  responses.py  search.py  serializers.py
app/post/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
app/studio/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py  views.py
app/submission/: admin.py  api.py  apps.py  forms.py  models.py  questions.py  serializers.py  services.py  tests.py  urls.py  views.py
app/user/: admin.py  api.py  apps.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
docker/: entrypoint.sh
docs/: api-spec.md  endpoints.md  submission-flow.md  submission-form-example.md  tiptap-post-editor.md
envs/: .env.example  dev.env  prod.env
static/css/: styles.css
templates/: base.html
templates/post/: gear_calculator.html  post_detail.html  post_form.html  post_list.html  submission_form.html  tagged_list.html
templates/studio/: dashboard.html  submission_detail.html
templates/user/: admin_dashboard.html  admin_submission_detail.html  login.html  profile.html  signup.html  submission_edit.html
(+44 files in other folders)
